Add 'build' command to binder project

--- a/packages/mobx-binder/package.json
+++ b/packages/mobx-binder/package.json
@@ -7,6 +7,7 @@
         "lib/"
     ],
     "scripts": {
+        "build": "tsc",
         "test": "_mocha --opts src/test/mocha.opts 'src/**/*Spec.ts'"
     },
     "repository": {
