--- a/packages/mobx-binder-core/package.json
+++ b/packages/mobx-binder-core/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mobx-binder",
+    "name": "mobx-binder-core",
     "version": "0.0.1",
     "description": "A form handling / field binding library for MobX",
     "main": "./lib/index.js",
@@ -26,12 +26,7 @@
     },
     "homepage": "https://github.com/metro-nom/mobx-binder#readme",
     "dependencies": {
-        "mobx": "^4.0.0 || ^5.0.0",
-        "mobx-binder-core": "^0.0.1"
-    },
-    "optionalDependencies": {
-        "email-validator": "^2.0.0",
-        "moment": ">=2.0.0"
+        "mobx": "^4.0.0 || ^5.0.0"
     },
     "peerDependencies": {
         "mobx": "^4.0.0 || ^5.0.0"
