--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "bootstrap": "lerna bootstrap --hoist",
     "reinitialize": "npm run clean && npm run bootstrap",
     "test": "lerna run test:ci",
-    "clean": "lerna clean",
+    "clean": "lerna clean -y",
     "release": "lerna publish",
     "ls": "lerna ls"
   },
