--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -17,10 +17,10 @@
     "dependencies": {
         "bootstrap": "^4.1.3",
         "classnames": "^2.2.6",
-        "mobx": "^5.0.0",
+        "mobx": "^4.0.0 || ^5.0.0",
         "mobx-binder": "^0.0.1",
         "mobx-react": "^5.0.0",
-        "moment": "^2.22.2",
+        "moment": ">=2.0.0",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
         "react-mobx-i18n": "^1.1.0",
@@ -46,7 +46,7 @@
         "mocha": "^6.0.1",
         "style-loader": "^0.20.3",
         "ts-loader": "^4.5.0",
-        "typescript": "^2.9.2",
+        "typescript": "^3.0.3",
         "url-loader": "^1.1.1",
         "webpack": "4.19.1",
         "webpack-bundle-analyzer": "^3.0.4",
