--- a/packages/mobx-binder/package.json
+++ b/packages/mobx-binder/package.json
@@ -6,9 +6,10 @@
     "scripts": {
         "clean": "rm -Rf lib",
         "build": "tsc",
-        "lint": "tslint 'src/**/*.ts' 'src/**/*.tsx'",
+        "lint": "tslint -p tsconfig.json 'src/**/*.ts' 'src/**/*.tsx'",
         "lint:fix": "npm run lint -- --fix",
-        "test": "_mocha --opts src/test/mocha.opts 'src/**/*Spec.ts'"
+        "test": "_mocha --opts src/test/mocha.opts 'src/**/*Spec.ts'",
+        "verify": "npm run build && npm run lint && npm run test"
     },
     "repository": {
         "type": "git",
@@ -48,6 +49,7 @@
         "sinon-chai": "^3.2.0",
         "ts-node": "^7.0.1",
         "tslint": "^5.12.1",
+        "tslint-no-circular-imports": "^0.6.2",
         "typescript": "^3.0.3"
     }
 }
