--- a/packages/mobx-binder/tsconfig.json
+++ b/packages/mobx-binder/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "es5",
         "module": "commonjs",
         "declaration": true,
         "outDir": "./lib",
         "strict": true,
+        "noUnusedLocals": true,
         "experimentalDecorators": true,
         "lib": [
             "es6", "dom"
