--- a/packages/mobx-binder-core/package.json
+++ b/packages/mobx-binder-core/package.json
@@ -9,6 +9,7 @@
         "lint": "tslint -p tsconfig.json 'src/**/*.ts' 'src/**/*.tsx'",
         "lint:fix": "npm run lint -- --fix",
         "test": "_mocha --opts src/test/mocha.opts 'src/**/*Spec.ts'",
+        "coverage": "nyc npm test",
         "verify": "npm run build && npm run lint && npm run test"
     },
     "repository": {
@@ -33,6 +34,7 @@
         "mobx": "^4.0.0 || ^5.0.0"
     },
     "devDependencies": {
+        "@istanbuljs/nyc-config-typescript": "^0.1.3",
         "@types/chai": "^4.1.7",
         "@types/chai-as-promised": "^7.1.0",
         "@types/data-driven": "0.0.30",
@@ -44,8 +46,10 @@
         "chai-as-promised": "^7.1.1",
         "data-driven": "^1.4.0",
         "mocha": "^6.0.1",
+        "nyc": "^14.1.1",
         "sinon": "^6.3.4",
         "sinon-chai": "^3.2.0",
+        "source-map-support": "^0.5.12",
         "ts-node": "^7.0.1",
         "tslint": "^5.12.1",
         "tslint-no-circular-imports": "^0.6.2",
