--- a/packages/mobx-binder-core/package.json
+++ b/packages/mobx-binder-core/package.json
@@ -54,5 +54,6 @@
         "tslint": "^5.12.1",
         "tslint-no-circular-imports": "^0.6.2",
         "typescript": "^3.0.3"
-    }
+    },
+    "gitHead": "57c559c783cc8c2b24c8966f42c19c9f5a5d8cee"
 }
