--- a/packages/mobx-binder-core/.nycrc
+++ b/packages/mobx-binder-core/.nycrc
@@ -5,7 +5,11 @@
         "lcov",
         "text"
     ],
+    "include": [
+        "src/**/*.ts"
+    ],
     "exclude": [
+        "src/**/*Spec.ts",
         "src/test/**/*.ts"
     ]
 }
