--- a/packages/mobx-binder-core/package.json
+++ b/packages/mobx-binder-core/package.json
@@ -28,6 +28,7 @@
     },
     "homepage": "https://github.com/metro-nom/mobx-binder#readme",
     "dependencies": {
+        "lodash.isequal": "^4.5.0",
         "mobx": "^4.0.0 || ^5.0.0"
     },
     "peerDependencies": {
@@ -39,6 +40,7 @@
         "@types/chai-as-promised": "^7.1.0",
         "@types/data-driven": "0.0.30",
         "@types/debug": "^4.1.4",
+        "@types/lodash.isequal": "^4.5.5",
         "@types/mocha": "^5.2.6",
         "@types/sinon": "^5.0.2",
         "@types/sinon-chai": "^3.2.0",
