--- a/packages/mobx-binder-core/tsconfig.json
+++ b/packages/mobx-binder-core/tsconfig.json
@@ -7,6 +7,7 @@
         "outDir": "./lib",
         "strict": true,
         "noUnusedLocals": true,
+        "esModuleInterop": true,
         "experimentalDecorators": true,
         "lib": [
             "es6", "dom"
