--- a/packages/mobx-binder/tsconfig.json
+++ b/packages/mobx-binder/tsconfig.json
@@ -8,6 +8,7 @@
         "strict": true,
         "noUnusedLocals": true,
         "experimentalDecorators": true,
+        "esModuleInterop": true,
         "lib": [
             "es6", "dom"
         ]
