Use separate package mobx-binder-utils to store central linting config

--- a/packages/mobx-binder-core/package.json
+++ b/packages/mobx-binder-core/package.json
@@ -44,18 +44,12 @@
         "@types/mocha": "^5.2.6",
         "@types/sinon": "^5.0.2",
         "@types/sinon-chai": "^3.2.0",
-        "@typescript-eslint/eslint-plugin": "^2.2.0",
-        "@typescript-eslint/parser": "^2.2.0",
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
         "data-driven": "^1.4.0",
-        "eslint": "^6.3.0",
-        "eslint-config-prettier": "^6.3.0",
-        "eslint-plugin-prettier": "^3.1.0",
-        "eslint-plugin-react": "^7.14.3",
+        "mobx-binder-utils": "^0.2.8",
         "mocha": "^6.0.1",
         "nyc": "^14.1.1",
-        "prettier": "^1.18.2",
         "sinon": "^6.3.4",
         "sinon-chai": "^3.2.0",
         "source-map-support": "^0.5.12",
