Migrate to eslint and fix the no-non-null-assertion by making everything more type-safe. This is a major update as some interfaces changed (and now require explicit `| undefined` in field types and type conversions.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "reinitialize": "npm run clean && npm run bootstrap",
     "test": "lerna run test:ci",
     "clean": "lerna run clean && lerna clean -y",
-    "release": "lerna publish",
+    "build": "lerna run build && lerna run lint && lerna run test",
+    "version": "lerna version",
+    "publish": "lerna publish from-git",
     "ls": "lerna ls"
   },
   "devDependencies": {
