--- a/packages/mobx-binder/package.json
+++ b/packages/mobx-binder/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "clean": "rm -Rf lib",
         "build": "tsc",
-        "lint": "eslint 'src/**/*.ts*'",
+        "lint": "eslint --max-warnings 0 'src/**/*.ts*'",
         "lint:fix": "npm run lint -- --fix",
         "test": "_mocha 'src/**/*Spec.ts'",
         "coverage": "nyc npm test",
