--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist",
     "reinitialize": "npm run clean && npm run bootstrap",
-    "test": "lerna run test:ci",
+    "test": "lerna run test",
     "clean": "lerna run clean && lerna clean -y",
     "build": "lerna run build && lerna run lint && lerna run test",
     "version": "lerna version",
