--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,10 @@ language: node_js
 cache:
   directories:
     - "$HOME/.npm"
-    - "node_modules"
 install:
   - npm ci
   - npm run reinitialize
-jobs:
-  include:
-    - stage: build
-      name: "Build"
-      script: npm run build
-    - stage: test
-      name: "Unit Tests"
-      script: npm run test
-    - name: "Linting"
-      script: npm run lint
-stages:
-  - build
-  - test
+script:
+  - npm run build
+  - npm run lint
+  - npm run test
