Add coverage checks

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist",
     "reinitialize": "npm run clean && npm run bootstrap",
+    "build": "lerna run build",
     "lint": "lerna run lint",
     "test": "lerna run test",
+    "coverage": "lerna run coverage",
     "clean": "lerna run clean && lerna clean -y",
-    "build": "lerna run build",
     "version": "lerna version",
     "publish": "lerna publish from-git",
     "ls": "lerna ls"
