--- a/packages/mobx-binder-moment/package.json
+++ b/packages/mobx-binder-moment/package.json
@@ -32,7 +32,7 @@
     "homepage": "https://github.com/metro-nom/mobx-binder#readme",
     "dependencies": {
         "mobx-binder": "^0.4.0",
-        "moment": "^2.0.0"
+        "moment": ">=2.0.0"
     },
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^0.1.3",
