--- a/packages/mobx-binder-moment/tsconfig.json
+++ b/packages/mobx-binder-moment/tsconfig.json
@@ -10,7 +10,7 @@
         "experimentalDecorators": true,
         "esModuleInterop": true,
         "lib": [
-            "es6", "dom"
+            "es2018", "esnext", "dom"
         ]
     },
     "include": [
