--- a/packages/mobx-binder-core/tsconfig.json
+++ b/packages/mobx-binder-core/tsconfig.json
@@ -6,9 +6,10 @@
         "declaration": true,
         "outDir": "./lib",
         "strict": true,
+        "noImplicitReturns": false,
         "noUnusedLocals": true,
-        "esModuleInterop": true,
         "experimentalDecorators": true,
+        "esModuleInterop": true,
         "lib": [
             "es2018", "esnext", "dom"
         ]
