--- a/packages/sample/tsconfig.json
+++ b/packages/sample/tsconfig.json
@@ -18,10 +18,7 @@
     "lib": [
       "es2018", "esnext", "dom"
     ],
-    "baseUrl": "src",
-    "paths": {
-      "app/*": ["./app/*"]
-    }
+    "baseUrl": "src"
   },
   "exclude": ["dist", "build", "node_modules"]
 }
