Fix coverage, expose `Binding.validity` for the deprecated `Binding.validate()`.

--- a/packages/mobx-binder-core/.nycrc
+++ b/packages/mobx-binder-core/.nycrc
@@ -2,13 +2,15 @@
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
     "reporter": [
-        "lcov",
+        "html",
         "text"
     ],
     "include": [
         "src/**/*.ts"
     ],
     "exclude": [
+        "src/index.ts",
+        "src/validation/Validator.ts",
         "src/**/*Spec.ts",
         "src/test/**/*.ts"
     ]
