--- a/packages/mobx-binder-moment/.nycrc
+++ b/packages/mobx-binder-moment/.nycrc
@@ -2,13 +2,14 @@
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
     "reporter": [
-        "lcov",
+        "html",
         "text"
     ],
     "include": [
         "src/**/*.ts"
     ],
     "exclude": [
+        "src/index.ts",
         "src/**/*Spec.ts",
         "src/test/**/*.ts"
     ]
