--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -20,6 +20,7 @@
         "mobx": "^4.0.0 || ^5.0.0",
         "mobx-binder": "^0.4.0",
         "mobx-binder-moment": "^0.4.0",
+        "mobx-binder-dayjs": "^0.4.0",
         "mobx-react-lite": "^1.4.1",
         "moment": ">=2.0.0",
         "react": "^16.5.2",
