--- a/packages/mobx-binder-dayjs/package.json
+++ b/packages/mobx-binder-dayjs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-binder-dayjs",
-    "version": "0.4.0",
+    "version": "0.5.0",
     "description": "Day.js conversion and validation support for mobx-binder",
     "main": "./lib/index.js",
     "scripts": {
@@ -31,8 +31,8 @@
     },
     "homepage": "https://github.com/metro-nom/mobx-binder#readme",
     "dependencies": {
-        "mobx-binder": "^0.4.0",
-        "dayjs": "^1.9.0"
+        "dayjs": "^1.9.0",
+        "mobx-binder": "^0.5.0"
     },
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^0.1.3",
