Migration to MobX 6, removal of internal decorator usage

--- a/packages/mobx-binder-core/tsconfig.json
+++ b/packages/mobx-binder-core/tsconfig.json
@@ -8,7 +8,7 @@
         "strict": true,
         "noImplicitReturns": false,
         "noUnusedLocals": true,
-        "experimentalDecorators": true,
+        "useDefineForClassFields": true,
         "esModuleInterop": true,
         "lib": [
             "es2018", "esnext", "dom"
