--- a/packages/sample/tsconfig.json
+++ b/packages/sample/tsconfig.json
@@ -5,8 +5,7 @@
     "jsx": "react",
     "module": "es6",
     "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
+    "useDefineForClassFields": true,
     "esModuleInterop": true,
     "declaration": false,
     "noImplicitAny": false,
