--- a/packages/mobx-binder-core/package.json
+++ b/packages/mobx-binder-core/package.json
@@ -32,10 +32,10 @@
     "homepage": "https://github.com/metro-nom/mobx-binder#readme",
     "dependencies": {
         "lodash.isequal": "^4.5.0",
-        "mobx": "^4.0.0 || ^5.0.0"
+        "mobx": "^6.0.0"
     },
     "peerDependencies": {
-        "mobx": "^4.0.0 || ^5.0.0"
+        "mobx": "^6.0.0"
     },
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^0.1.3",
