--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -17,11 +17,11 @@
     "dependencies": {
         "bootstrap": "^4.1.3",
         "classnames": "^2.2.6",
-        "mobx": "^4.0.0 || ^5.0.0",
+        "mobx": "^6.0.0",
         "mobx-binder": "^0.6.1",
         "mobx-binder-dayjs": "^0.6.1",
         "mobx-binder-moment": "^0.6.1",
-        "mobx-react-lite": "^1.4.1",
+        "mobx-react-lite": "^3.0.0",
         "moment": ">=2.0.0",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
