--- a/packages/mobx-binder-dayjs/package.json
+++ b/packages/mobx-binder-dayjs/package.json
@@ -31,7 +31,7 @@
     },
     "homepage": "https://github.com/metro-nom/mobx-binder#readme",
     "dependencies": {
-        "dayjs": "^1.9.0",
+        "dayjs": "~1.9.8",
         "mobx-binder": "^1.0.0"
     },
     "devDependencies": {
