--- a/package.json
+++ b/package.json
@@ -1,68 +1,23 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "bootstrap": "lerna bootstrap --hoist",
+    "all": "npm run reinitialize && npm run build && npm run lint && npm run test && npm run coverage",
+    "reinitialize": "npm run clean:all && npm install && npm run bootstrap",
+    "full-build": "npm run reinitialize && npm run build && npm run lint && npm run coverage",
+    "build": "lerna run build",
+    "lint": "lerna run lint",
+    "test": "lerna run test",
+    "coverage": "lerna run coverage",
+    "clean": "lerna run clean && lerna clean -y",
+    "clean:all": "lerna run clean:all && lerna clean -y && rm -Rf node_modules",
+    "version": "lerna version",
+    "publish": "lerna publish from-git",
+    "ls": "lerna ls",
+    "sample": "lerna run start"
+  },
   "devDependencies": {
     "lerna": "^5.1.8"
-  },
-  "dependencies": {
-    "@istanbuljs/nyc-config-typescript": "^0.1.3",
-    "@types/chai": "^4.1.7",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/classnames": "^2.2.6",
-    "@types/data-driven": "0.0.30",
-    "@types/debug": "^4.1.4",
-    "@types/lodash.isequal": "^4.5.5",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^9.6.32",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.8",
-    "@types/reactstrap": "^6.4.0",
-    "@types/sinon": "^5.0.2",
-    "@types/sinon-chai": "^3.2.0",
-    "@types/webpack": "^3.8.14",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
-    "bootstrap": "^4.1.3",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "classnames": "^2.2.6",
-    "css-loader": "^0.28.11",
-    "data-driven": "^1.4.0",
-    "dayjs": "~1.9.8",
-    "email-validator": "^2.0.0",
-    "eslint": "^6.3.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "file-loader": "^1.1.11",
-    "html-loader": "^1.0.0-alpha.0",
-    "html-webpack-plugin": "^3.2.0",
-    "lodash.isequal": "^4.5.0",
-    "mobx": "^6.0.0",
-    "mobx-react-lite": "^3.0.0",
-    "mocha": "^6.0.1",
-    "moment": ">=2.0.0",
-    "nyc": "^14.1.1",
-    "prettier": "^1.18.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-mobx-i18n": "^1.1.0",
-    "reactstrap": "^6.4.0",
-    "sinon": "^6.3.4",
-    "sinon-chai": "^3.2.0",
-    "source-map-support": "^0.5.12",
-    "style-loader": "^0.20.3",
-    "ts-loader": "^4.5.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.12.1",
-    "tslint-no-circular-imports": "^0.6.2",
-    "typescript": "^4.0.2",
-    "url-loader": "^1.1.1",
-    "webpack": "4.19.1",
-    "webpack-bundle-analyzer": "^3.0.4",
-    "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.0",
-    "webpack-hot-middleware": "^2.24.2"
   }
 }
