--- a/packages/mobx-binder-core/package.json
+++ b/packages/mobx-binder-core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-binder-core",
-    "version": "1.3.1",
+    "version": "1.4.0-alpha.0",
     "description": "A form handling / field binding library for MobX",
     "main": "./lib/index.js",
     "scripts": {
