--- a/packages/mobx-binder/package.json
+++ b/packages/mobx-binder/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-binder",
-    "version": "1.3.1",
+    "version": "1.4.0-alpha.0",
     "description": "A form handling / field binding library for MobX",
     "main": "./lib/index.js",
     "scripts": {
@@ -33,7 +33,7 @@
     "dependencies": {
         "email-validator": "^2.0.0",
         "mobx": "^6.0.0",
-        "mobx-binder-core": "^1.3.1"
+        "mobx-binder-core": "^1.4.0-alpha.0"
     },
     "peerDependencies": {
         "mobx": "^6.0.0"
