--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -7,26 +7,26 @@
     "scripts": {
         "lint": "eslint --max-warnings 0 'src/**/*.ts*'",
         "lint:fix": "yarn run lint -- --fix",
-        "start": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
-        "build": "mkdir -p dist && webpack -p --progress --colors",
+        "start": "webpack-dev-server --mode development --hot --progress --port 3000 --open",
+        "build": "mkdir -p dist && NODE_ENV=production webpack --progress",
         "create-stats": "NODE_ENV=production webpack --profile --json > webpack-stats.json",
         "show-stats": "webpack-bundle-analyzer webpack-stats.json",
         "prettier": "prettier --write \"src/**/*.{ts,tsx,css}\""
     },
     "license": "MIT",
     "dependencies": {
-        "bootstrap": "^4.1.3",
+        "bootstrap": "^5.2.3",
         "classnames": "^2.2.6",
+        "i18n-harmony": "^1.6.1",
         "mobx": "^6.0.0",
         "mobx-binder": "^1.3.1",
         "mobx-binder-dayjs": "^1.3.1",
         "mobx-binder-moment": "^1.3.1",
         "mobx-react-lite": "^3.0.0",
         "moment": ">=2.0.0",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-mobx-i18n": "^1.1.0",
-        "reactstrap": "^6.4.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "reactstrap": "^9.1.6",
         "tslint": "^5.12.1"
     },
     "devDependencies": {
@@ -34,25 +34,24 @@
         "@types/classnames": "^2.2.6",
         "@types/mocha": "^5.2.6",
         "@types/node": "^14.14.22",
-        "@types/react": "^16.8.23",
-        "@types/react-dom": "^16.8.4",
-        "@types/reactstrap": "^6.4.0",
-        "@types/webpack": "^3.8.14",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.0",
+        "@types/webpack": "^5.28.0",
         "chai": "^4.2.0",
-        "css-loader": "^0.28.11",
-        "file-loader": "^1.1.11",
-        "html-loader": "^1.0.0-alpha.0",
-        "html-webpack-plugin": "^3.2.0",
+        "css-loader": "^6.7.3",
+        "file-loader": "^6.2.0",
+        "html-loader": "^4.2.0",
+        "html-webpack-plugin": "^5.5.0",
         "mocha": "^6.0.1",
-        "style-loader": "^0.20.3",
-        "ts-loader": "^4.5.0",
-        "typescript": "^4.0.2",
-        "url-loader": "^1.1.1",
-        "webpack": "4.19.1",
-        "webpack-bundle-analyzer": "^3.0.4",
+        "style-loader": "^3.3.2",
+        "ts-loader": "^9.4.2",
+        "typescript": "^5.0.2",
+        "url-loader": "^4.1.1",
+        "webpack": "^5.76.3",
+        "webpack-bundle-analyzer": "^4.8.0",
         "webpack-cleanup-plugin": "^0.5.1",
-        "webpack-cli": "^3.2.3",
-        "webpack-dev-server": "^3.2.0",
-        "webpack-hot-middleware": "^2.24.2"
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.13.1",
+        "webpack-hot-middleware": "^2.25.3"
     }
 }
