Use coverage for CI

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "all": "yarn run reinitialize && yarn run build && yarn run lint && yarn run test && yarn run coverage",
     "reinitialize": "yarn run clean:all && yarn audit && yarn install && yarn run bootstrap",
     "full-build": "yarn run reinitialize && yarn run build && yarn run lint && yarn run coverage",
-    "build": "lerna run build",
-    "lint": "lerna run lint",
-    "test": "lerna run test",
-    "coverage": "lerna run coverage",
+    "build": "turbo run build",
+    "lint": "turbo run lint",
+    "test": "turbo run test",
+    "coverage": "turbo run coverage",
     "clean": "lerna run clean && lerna clean -y",
     "clean:all": "lerna run clean:all && lerna clean -y && rm -Rf node_modules",
     "version": "lerna version",
