--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -39,6 +39,7 @@
         "@types/webpack": "^5.28.0",
         "chai": "^4.2.0",
         "css-loader": "^6.7.3",
+        "eslint": "^6.3.0",
         "file-loader": "^6.2.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.0",
