--- a/packages/mobx-binder-core/package.json
+++ b/packages/mobx-binder-core/package.json
@@ -50,6 +50,7 @@
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
         "data-driven": "^1.4.0",
+        "eslint": "^6.3.0",
         "mobx-binder-utils": "^1.2.0",
         "mocha": "^6.0.1",
         "nyc": "^14.1.1",
