--- a/packages/mobx-binder-utils/package.json
+++ b/packages/mobx-binder-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobx-binder-utils",
-  "version": "1.2.0",
+  "version": "1.4.0-alpha.1",
   "private": true,
   "description": "Build and test support utility package",
   "scripts": {
