--- a/packages/mobx-binder-dayjs/package.json
+++ b/packages/mobx-binder-dayjs/package.json
@@ -32,7 +32,7 @@
     "homepage": "https://github.com/metro-nom/mobx-binder#readme",
     "dependencies": {
         "dayjs": "~1.9.8",
-        "mobx-binder": "^1.4.0"
+        "mobx-binder": "1.4.0"
     },
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^0.1.3",
@@ -45,7 +45,7 @@
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
         "data-driven": "^1.4.0",
-        "eslint": "^6.3.0",
+        "eslint": "^8.36.0",
         "mocha": "^6.0.1",
         "nyc": "^14.1.1",
         "sinon": "^6.3.4",
