--- a/packages/mobx-binder/package.json
+++ b/packages/mobx-binder/package.json
@@ -33,7 +33,7 @@
     "dependencies": {
         "email-validator": "^2.0.0",
         "mobx": "^6.0.0",
-        "mobx-binder-core": "^1.4.0"
+        "mobx-binder-core": "1.4.0"
     },
     "peerDependencies": {
         "mobx": "^6.0.0"
@@ -49,8 +49,8 @@
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
         "data-driven": "^1.4.0",
-        "eslint": "^6.3.0",
-        "mobx-binder-utils": "^1.4.0",
+        "eslint": "^8.36.0",
+        "mobx-binder-utils": "1.4.0",
         "mocha": "^6.0.1",
         "nyc": "^14.1.1",
         "sinon": "^6.3.4",
