--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -19,9 +19,9 @@
         "classnames": "^2.2.6",
         "i18n-harmony": "^1.6.1",
         "mobx": "^6.0.0",
-        "mobx-binder": "^1.4.0",
-        "mobx-binder-dayjs": "^1.4.0",
-        "mobx-binder-moment": "^1.4.0",
+        "mobx-binder": "1.4.0",
+        "mobx-binder-dayjs": "1.4.0",
+        "mobx-binder-moment": "1.4.0",
         "mobx-react-lite": "^3.0.0",
         "moment": ">=2.0.0",
         "react": "^18.2.0",
@@ -39,7 +39,7 @@
         "@types/webpack": "^5.28.0",
         "chai": "^4.2.0",
         "css-loader": "^6.7.3",
-        "eslint": "^6.3.0",
+        "eslint": "^8.36.0",
         "file-loader": "^6.2.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.0",
